--- a/templates/forum/sujet.html.twig
+++ b/templates/forum/sujet.html.twig
@@ -5,35 +5,44 @@ Forum
 {% endblock %}
 {% block style %}
     {{ parent() }}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="{{ asset('build/css/forum-style.css') }}"  rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block body %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="{{ path('home') }}">ESPERLUETTE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('home')}}">Accueil <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-  </nav>
+	<nav class="navbar navbar-expand-md fixed-top top-nav">
+		<div class="container">
+			<a class="navbar-brand" href="index.html"><strong>& Esperluette</strong></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('home') }}">Accueil<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('about') }}">Le projet</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('forum') }}">Forum</a>
+					</li>
+                                            {% if not app.user %}
+                                                <li class="nav-item">
+                                                    <a class="nav-link" data-toggle="modal" data-target="#loginModal">Se connecter</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="{{ path("deconnexion") }}">Déconnexion</a>
+                                                </li>
+                                            {% endif %}
+				</ul>
+			</div>
+		</div>
+	</nav>
 
 
  <div class="container">
@@ -43,6 +52,9 @@ Forum
         <!-- Blog Entries Column -->
         <div class="col-md-8 my-4" id="tabForum">
             <div class="msgListing">
+                <div class="form-group"
+                    <h4>Vous consulter le sujet {{ sujet.intitule }}</h4><a class="float-right" href="{{ path('forum') }}"><i class="fa fa-arrow-left fa-2x text-danger" aria-hidden="true"></i></a>
+                </div>
             {% for message in sujet.messages %}
                 <div class="card mb-2">
                     <div class="card-body">
@@ -54,6 +66,22 @@ Forum
                 </div>
             {% endfor %}
             </div>
+            <nav aria-label="Page navigation example">
+                <ul id='page' class='pagination'>
+                    <li class="nav-item" id="previous">
+                        <a class="page-link" aria-label="Précédent" onclick="nextPrev(-1)">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Précédent</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" id="next">
+                        <a class="page-link" aria-label="Suivant" onclick="nextPrev(1)">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Suivant</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
             <hr id="endMessage">
             
             <div class="form-group">
