--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,11 +38,11 @@
 						<a class="nav-link" href="{{ path('about') }}">Le projet</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
+						<a class="nav-link" href="{{ path('forum') }}">Forum</a>
 					</li>
                                             {% if not app.user %}
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#loginModal">Se connecter</a>
+                                                    <a class="nav-link" data-toggle="modal" data-target="#loginModal">Se connecter</a>
                                                 </li>
                                             {% else %}
                                                 <li class="nav-item">
