--- a/templates/questionnaire/index.html.twig
+++ b/templates/questionnaire/index.html.twig
@@ -24,7 +24,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-md top-nav ">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><strong>Esperluette</strong></a>
+                <a class="navbar-brand" href="{{ path('home') }}"><strong>Esperluette</strong></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
@@ -41,10 +41,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="modal" data-target="#loginModal">Se
-                                connecter</a>
-                        </li>
+                        {% if not app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#loginModal">Se connecter</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path("deconnexion") }}">Déconnexion</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -142,40 +147,38 @@
     </section>
 
     <!-- Modal LOGIN-->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Se connecter</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">email</div>
-                            </div>
-                            <input type="text" class="form-control" id="login" value="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">Mot de passe</div>
-                            </div>
-                            <input class="form-control" type="password" id="password" value="">
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
-                    <button type="button" class="btn btn-outline-primary" onclick="checkMyName();">Valider</button>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Se connecter</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+                                <form class="ui form popupConnexion" action="{{ path('connexion') }}" method="POST">
+				<div class="modal-body">
+					<div class="form-group">
+							<div class="input-group-prepend">
+								<div class="input-group-text">email</div>
+							</div>
+							<input type="text" class="form-control" id="login" name="_username" value="">
+					</div>
+					<div class="form-group">
+							<div class="input-group-prepend">
+								<div class="input-group-text">Mot de passe</div>
+							</div>
+							<input class="form-control" type="password" name="_password" id="password" value="">
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
+                                        <button type="submit" class="btn btn-outline-primary">Valider</button>
+				</div>
+                                </form>
+			</div>
+		</div>
+	</div>
     <!-- Javascript -->
     {% block js %}
     <script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
