--- a/templates/questionnaire/index.html.twig
+++ b/templates/questionnaire/index.html.twig
@@ -148,37 +148,41 @@
 
     <!-- Modal LOGIN-->
 	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Se connecter</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-                                <form class="ui form popupConnexion" action="{{ path('connexion') }}" method="POST">
-				<div class="modal-body">
-					<div class="form-group">
-							<div class="input-group-prepend">
-								<div class="input-group-text">email</div>
-							</div>
-							<input type="text" class="form-control" id="login" name="_username" value="">
-					</div>
-					<div class="form-group">
-							<div class="input-group-prepend">
-								<div class="input-group-text">Mot de passe</div>
-							</div>
-							<input class="form-control" type="password" name="_password" id="password" value="">
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
-                                        <button type="submit" class="btn btn-outline-primary">Valider</button>
-				</div>
-                                </form>
-			</div>
-		</div>
-	</div>
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Se connecter</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                                    <form class="ui form popupConnexion" action="{{ path('connexion') }}" method="POST">
+                    <div class="modal-body">
+                        <div class="form-group">
+    {#						<div class="input-group">#}
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">email</div>
+                                </div>
+                                <input type="text" class="form-control" id="login" name="_username" value="">
+    {#						</div>#}
+                        </div>
+                        <div class="form-group">
+    {#						<div class="input-group">#}
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">Mot de passe</div>
+                                </div>
+                                <input class="form-control" type="password" name="_password" id="password" value="">
+    {#						</div>#}
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
+                                            <button type="submit" class="btn btn-outline-primary">Valider</button>
+                    </div>
+                                    </form>
+                </div>
+            </div>
+        </div>
     <!-- Javascript -->
     {% block js %}
     <script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
