--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,10 +32,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="http://'.$_SERVER['SERVER_NAME'].'/"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="{{path('home')}}"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="http://'.$_SERVER['SERVER_NAME'].'/about">'>Le projet</a>
+						<a class="nav-link" href="{{path('about')}}">'>Le projet</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
