--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -3,38 +3,50 @@
 {% block title %} 
 Forum
 {% endblock %}
-{% block style %}
-    {{ parent() }}
+{% block stylesheets %}
+    {{parent()}}
     <link rel="stylesheet" href="{{ asset('build/css/forum-style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/css/secondary-style.css') }}">
 {% endblock %}
 
 {% block body %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="{{ path('home') }}">ESPERLUETTE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('home')}}">Accueil <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-  </nav>
+{% block NavBar %}
+    <div class="container">
+        <nav class="navbar navbar-expand-md top-nav ">
+            <div class="container">
+                <a class="navbar-brand" href="{{ path('home') }}"><strong>Esperluette</strong></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+                </button>
 
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('home')}}">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('about')}}">Le projet<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                        {% if not app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Se connecter</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path("deconnexion") }}">Déconnexion</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+{% endblock %}
 
  <div class="container">
 
@@ -109,7 +121,9 @@ Forum
           <div class="card my-4">
             <h5 class="card-header">Dernière publication</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                <p>Par {{ lastmsg.auteur.prenom }} le {{ lastmsg.dateCreation|date('d/m/Y à H:i:s') }}</p>
+                <p >Publié à la suite du sujet {{lastmsg.sujet.intitule}}</p>
+                <a href="{{path('forum')}}/sujet/{{lastmsg.sujet.id}}">Consulter la publication</a>
             </div>
           </div>
 
@@ -121,8 +135,42 @@ Forum
     </div>
     <!-- /.container -->
 
-
+	<!-- Modal LOGIN-->
+	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Se connecter</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+							<div class="input-group-prepend">
+								<div class="input-group-text">email</div>
+							</div>
+							<input type="text" class="form-control" id="login" value="">
+					</div>
+					<div class="form-group">
+							<div class="input-group-prepend">
+								<div class="input-group-text">Mot de passe</div>
+							</div>
+							<input class="form-control" type="password" id="password" value="">
+					</div>
+                                    <a href="{{path('inscription')}}">Vous n'est pas encore inscrit ? C'est par ici !</a>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
+					<button type="button" class="btn btn-outline-primary" onclick="checkMyName();">Valider</button>
+				</div>
+			</div>
+		</div>
+	</div>
+        
 <script src="{{ asset('build/js/jquery-3.3.1.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('build/js/notify.min.js') }}"></script>
 <script src="{{ asset('build/js/forum.js') }}"></script>
 {% endblock %}
