--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -40,6 +40,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path('forum') }}">Forum</a>
 					</li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="#contact">Contact</a>
+                                        </li>
                                             {% if not app.user %}
                                                 <li class="nav-item">
                                                     <a class="nav-link" data-toggle="modal" data-target="#loginModal">Se connecter</a>
@@ -230,7 +233,7 @@
 	</section>
 
 	<!-- CONTACT -->
-	<section class="info-section bg-light py-4">
+	<section class="info-section bg-light py-4" id="contact">
 		<div class="container">
 				<form>
 						<h3 class="mb-4">Nous contacter</h3>
@@ -307,6 +310,8 @@
 	</div>
 	<!-- Javascript -->
 	{% block js %}
+        <script src="{{ asset('build/js/jquery-3.3.1.js') }}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
 	<script src="{{ asset('build/js/core.js') }}"></script>
 	<script src="{{ asset('build/js/cookiechoices.js') }}"></script><script>document.addEventListener('DOMContentLoaded', function(event){cookieChoices.showCookieConsentBar('Ce site utilise des cookies pour vous offrir le meilleur service. En poursuivant votre navigation, vous acceptez l’utilisation des cookies.', 'J’accepte', 'En savoir plus', 'http://www.example.com/mentions-legales/');});</script>
