--- a/templates/questionnaire/index.html.twig
+++ b/templates/questionnaire/index.html.twig
@@ -33,13 +33,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="./">Accueil</a>
+                            <a class="nav-link" href="{{path('home')}}">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about">Le projet<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{{path('about')}}">Le projet<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="{{path('forum')}}">Forum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         {% if not app.user %}
                             <li class="nav-item">
@@ -82,7 +85,7 @@
                     {% endfor %}
                 </div>
                 <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Envoyer</button>
+                    <button type="submit" class="btn btn-primary getNotified">Envoyer</button>
                 </div>
             </form>
         </div>
@@ -182,6 +185,7 @@
     <!-- Javascript -->
     {% block js %}
     <script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('build/js/notify.min.js') }}"></script>
     <script src="{{ asset('build/js/core.js') }}"></script>
     <script src="{{ asset('build/js/cookiechoices.js') }}"></script>
     <script src="{{ asset('build/js/add.js') }}"></script>
