--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -1,25 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
-
+{% block title %}Inscription{% endblock %}
+{% block stylesheets %}
+    {{parent()}}
+    <link rel="stylesheet" href="{{ asset('build/css/register.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/css/secondary-style.css') }}">
+{% endblock %}
 {% block body %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
 
-<form action="{{ path('check') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+                        <div id="register" class="my-4">
+                           <div class="login-inner">
+                                <div class="title">
+                                    <h1>Rejoignez <span>nous!</span></h1>
+                                </div>
+                                <div class="login-form">
+                                    <form id="registerForm" action="{{path('register')}}" method="POST">
+                                        <div class="form-details">
+                                            <label class="user">
+                                                <input type="text" name="nom" placeholder="Nom" id="username">
+                                            </label>
+                                            <label class="user">
+                                                <input type="text" name="prenom" placeholder="Prenom" id="username">
+                                            </label>
+                                            <label class="mail">
+                                                <input type="email" name="email" placeholder="Adresse mail" id="mail">
+                                            </label>
+                                            <label class="pass">
+                                                <input type="password" name="password" placeholder="Mot de passe" id="password">
+                                            </label>
+                                            <label class="pass">
+                                                <select class="custom-select" id="inlineFormCustomSelect" name="type" style="border-style: none none solid;">
+{#                                                    <option selected>Qui êtes vous ?</option>#}
+                                                    <option value="Celleneuvois">Celleneuvois</option>
+                                                    <option value="Agriculteur">Agriculteur</option>
+{#                                                    <option value="3">Three</option>#}
+                                                  </select>
+                                            </label>
+                                        </div>
+                                        <button type="submit" class="form-btn">Valider</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-
-    <button type="submit">login</button>
-</form>
+<script src="{{ asset('build/js/register.js') }}"></script>
 {% endblock %}
