ajout des lien d'inscription

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -99,7 +99,7 @@
 							<h5 class="card-title">Collaborez</h5>
 							<p class="card-text">Inscrivez-vous et participez plus activement à l'élaboration du projet grâce à notre
 								plateforme participative</p>
-							<a href="#" class="btn btn-primary">S'inscrire</a>
+							<a href="{{path('inscription')}}" class="btn btn-primary">S'inscrire</a>
 						</div>
 					</div>
 				</div>
@@ -299,6 +299,7 @@
 							<input class="form-control" type="password" name="_password" id="password" value="">
 {#						</div>#}
 					</div>
+                                        <a href="{{path('inscription')}}">Vous n'est pas encore inscrit ? C'est par ici !</a>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
