--- a/templates/questionnaire/index.html.twig
+++ b/templates/questionnaire/index.html.twig
@@ -173,6 +173,7 @@
 							</div>
 							<input class="form-control" type="password" name="_password" id="password" value="">
 					</div>
+                                    <a href="{{path('inscription')}}">Vous n'est pas encore inscrit ? C'est par ici !</a>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
