--- a/templates/questionnaire/index.html.twig
+++ b/templates/questionnaire/index.html.twig
@@ -6,6 +6,7 @@
 </head>
 
 {% block stylesheets %}
+    <link rel="icon" href="{{ asset("./build/img/espe.png") }}" type="image/x-icon">
 <!-- bootstrap Style CSS File -->
 <link rel="stylesheet" href="{{ asset('build/css/bootstrap.min.css') }}">
 <!-- Custom Style CSS File -->
