--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Inscription{% endblock %}
 {% block stylesheets %}
     {{parent()}}
+    <link rel="icon" href="{{ asset("./build/img/espe.png") }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ asset('build/css/register.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('build/css/secondary-style.css') }}">
 {% endblock %}
